First example of how to use single file imports in Vue

--- a/NormanDoors/templates/main.html
+++ b/NormanDoors/templates/main.html
@@ -4,5 +4,7 @@
       <title>Hello!</title>
    </head>
    <body>
+      <div id="main"></div>
+      <script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}"></script>
    </body>
 </html>
