Changed name to WorkoutBuddies

--- a/WorkoutBuddies/templates/main.html
+++ b/WorkoutBuddies/templates/main.html
@@ -4,7 +4,9 @@
       <title>Hello!</title>
    </head>
    <body>
-      <div id="main"></div>
+      <div id="main">
+         <MainMenu/>
+      </div>
       <script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}"></script>
    </body>
 </html>
