More complete example of how to use single file imports in Vue

--- a/WorkoutBuddies/templates/feed.html
+++ b/WorkoutBuddies/templates/feed.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
    <head>
-      <title>Hello!</title>
+      <title>{{name}}'s feed</title>
    </head>
    <body>
       <div id="main">
