Added accordion to main page

--- a/WorkoutBuddies/templates/main.html
+++ b/WorkoutBuddies/templates/main.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <html>
    <head>
-      <title>Hello!</title>
+      <title>Welcome to Workout Buddies!</title>
    </head>
    <body>
       <div id="main">
-         <MainMenu name={{name}}></MainMenu>
+         <MainMenu></MainMenu>
          <MainMenuDivider></MainMenuDivider>
+         <MainPage></MainPage>
       </div>
       <script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}"></script>
    </body>
