--- a/WorkoutBuddies/templates/main.html
+++ b/WorkoutBuddies/templates/main.html
@@ -8,6 +8,7 @@
          <MainMenu></MainMenu>
          <MainMenuDivider></MainMenuDivider>
          <MainPage></MainPage>
+         <div style="height: 100px"></div>
       </div>
       <script type="text/javascript" src="{{ url_for('static', filename='js/bundle.js') }}"></script>
    </body>
